# Jogo-TecProg

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  Jogo.cpp  Jogo.hpp  MediaEngine.cpp  MediaEngine.hpp  Principal.cpp  Principal.hpp  base_includes.h  main.cpp
src/Jogo/: FrameTimer.cpp  FrameTimer.hpp  GerenciadorGrafico.cpp  GerenciadorGrafico.hpp  Jogo.cpp  Jogo.hpp  MediaEngine.cpp  MediaEngine.hpp  MediaEngineParameters.cpp  MediaEngineParameters.hpp  Parameters.cpp  Parameters.hpp  ResourcesHolder.hpp  base_includes.hpp
src/Jogo/Entidades/: Atirador.cpp  Atirador.hpp  Desmatador.cpp  Desmatador.hpp  Entidade.cpp  Entidade.hpp  Espinho.cpp  Espinho.hpp  Inimigo.cpp  Inimigo.hpp  Jogador.cpp  Jogador.hpp  Mapa.cpp  Mapa.hpp  Narcotraficante.cpp  Narcotraficante.hpp  NarcotraficanteDesmatador.cpp  NarcotraficanteDesmatador.hpp  Obstaculo.cpp  Obstaculo.hpp  Pedra.cpp  Pedra.hpp  Personagem.cpp  Personagem.hpp  PlantaVenenosa.cpp  PlantaVenenosa.hpp  Projetil.cpp  Projetil.hpp  level.cpp  level.hpp
src/Jogo/Fases/: Fase.cpp  Fase.hpp  FaseEventHandler.cpp  FaseEventHandler.hpp  FaseFloresta.cpp  FaseFloresta.hpp  FaseMontanha.cpp  FaseMontanha.hpp  FaseTeste.cpp  FaseTeste.hpp  SalvadoraFase.cpp  SalvadoraFase.hpp
src/Jogo/GUI/: Button.cpp  Button.hpp  Context.cpp  Context.hpp  EventHandler.cpp  EventHandler.hpp  ListaWidgets.cpp  ListaWidgets.hpp  TextView.cpp  TextView.hpp  Widget.cpp  Widget.hpp  base_gui_includes.hpp
src/Jogo/Gerenciadores/: GerenciadorArquivos.cpp  GerenciadorArquivos.hpp  GerenciadorColisoes.cpp  GerenciadorColisoes.hpp  GerenciadorGrafico.cpp  GerenciadorGrafico.hpp
src/Jogo/Menus/: ConfigMenu.cpp  ConfigMenu.hpp  EndGameMenu.cpp  EndGameMenu.hpp  FailedMenu.cpp  FailedMenu.hpp  GameMenu.cpp  GameMenu.hpp  MainMenu.cpp  Menu.cpp  (+8 more)
(+86 files in other folders)
